--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -19,6 +19,114 @@
     <!--Add a nav bar here -->
 
     <!--Add a dealer table here -->
+<table class="table">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Dealer Name</th>
+        <th>City</th>
+		<th>Address</th> 
+		<th>Zip</th>
+		<th>State</th>
+		<td><select>
+		<option>TX</option>
+		</select></td>
+    <tbody>
+
+      <tr>
+          <td>1</td>
+		    <td> <a class="btn btn-link" href="#">Holdlamis Car Dealership</a></td>
+            <td>EI Paso</td>
+			<td>3 Nova Court</td>
+			<td>88545</td>
+			<td>TX</td>
+      </tr>
+      <tr>
+         <td>2</td>
+		   <td> <a class="btn btn-link" href="#">Temp Car Dealership</a></td>
+           <td>Minneapolis</td>
+			<td>7676 crossroad</td>
+			<td>55402</td>
+			<td>MN</td>
+      </tr>
+	  <tr>
+         <td>3</td>
+		   <td> <a class="btn btn-link" href="#">Sub-Ex Car Dealership</a></td>
+         <td>Birmingham</td>
+			<td>9477 Twin Pines Center</td>
+			<td>35285</td>
+			<td>AL</td>
+      </tr>
+	  <tr>
+         <td>4</td>
+		   <td> <a class="btn btn-link" href="#">Solarbreeze Car Dealership</a></td>
+          <td>Dallas</td>
+			<td>85800 Hazelcrest Circle</td>
+			<td>75241</td>
+			<td>TX</td>
+      </tr>
+	  <tr>
+         <td>5</td>
+		   <td> <a class="btn btn-link" href="#">Regrant Car Dealership</a></td>
+          <td>Baltimore</td>
+			<td>93 Golf course pass</td>
+			<td>21203</td>
+			<td>MD</td>
+      </tr>
+	  <tr>
+         <td>6</td>
+		   <td> <a class="btn btn-link" href="#">Stronghold Car Dealership</a></td>
+            <td>Wilkes Barre</td>
+			<td>2 Burrows Hill</td>
+			<td>18763</td>
+			<td>PA</td>
+      </tr>
+	  <tr>
+         <td>7</td>
+		   <td> <a class="btn btn-link" href="#">Job Car Dealership</a></td>
+         <td>Pueblo</td>
+			<td>9 Cambridge Park</td>
+			<td>81010</td>
+			<td>CO</td>
+      </tr>
+	  <tr>
+         <td>8</td>
+		   <td> <a class="btn btn-link" href="#">Bytecard Car Dealership</a></td>
+        <td>Topeka</td>
+			<td>288 Larry Place</td>
+			<td>66642</td>
+			<td>KS</td>
+      </tr>
+	  <tr>
+         <td>9</td>
+		   <td> <a class="btn btn-link" href="#">Job Car Dealership</a></td>
+            <td>Dallas</td>
+			<td>253 Hanson Junction</td>
+			<td>75216</td>
+			<td>TX</td>
+      </tr>
+	  <tr>
+         <td>10</td>
+		   <td> <a class="btn btn-link" href="#">Alphazap Car Dealership</a></td>
+        <td>Washington</td>
+			<td>108 Memorial Pass</td>
+			<td>20005</td>
+			<td>DC</td>
+      </tr>
+	  <tr>
+         <td>11</td>
+		   <td> <a class="btn btn-link" href="#">Rank Car Dealership</a></td>
+        <td>Carol Stream</td>
+			<td>8108 Dryden Court</td>
+			<td>60351</td>
+			<td>IL</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+</body>
+</html>
 
     </body>
 
